[package]
name = "meerkat-cli"
description = "Headless CLI for Meerkat"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "rkat"
path = "src/main.rs"

[dependencies]
meerkat = { workspace = true }
meerkat-core = { workspace = true }
meerkat-client = { workspace = true }
meerkat-store = { workspace = true }
meerkat-tools = { workspace = true }
meerkat-mcp-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
humantime = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json = { workspace = true }
meerkat-comms = { workspace = true }

[lints]
workspace = true
