[package]
name = "rkat"
description = "CLI for the Meerkat agent platform — run LLM agents from the terminal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "rkat"
path = "src/main.rs"

[[test]]
name = "e2e_rkat_comms"
path = "tests/e2e_rkat_comms.rs"
required-features = ["integration-real-tests"]

[[test]]
name = "e2e_rkat_init"
path = "tests/e2e_rkat_init.rs"
required-features = ["integration-real-tests"]

[[test]]
name = "e2e_resume"
path = "tests/e2e_resume.rs"
required-features = ["integration-real-tests"]

[[test]]
name = "e2e_smoke"
path = "tests/e2e_smoke.rs"
required-features = ["integration-real-tests"]

[[test]]
name = "e2e_mob_smoke_matrix"
path = "tests/e2e_mob_smoke_matrix.rs"
required-features = ["integration-real-tests"]

[[test]]
name = "e2e_mobpack_smoke"
path = "tests/e2e_mobpack_smoke.rs"
required-features = ["integration-real-tests"]

[dependencies]
meerkat = { workspace = true }
meerkat-core = { workspace = true }
meerkat-contracts = { workspace = true }
meerkat-client = { workspace = true }
meerkat-store = { workspace = true }
meerkat-tools = { workspace = true }
meerkat-mob = { workspace = true }
meerkat-mob-pack = { workspace = true }
meerkat-mob-mcp = { workspace = true }
meerkat-rpc = { workspace = true }
meerkat-mcp = { workspace = true, optional = true }
meerkat-comms = { workspace = true, optional = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
humantime = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }

[features]
default = ["anthropic", "openai", "gemini", "jsonl-store", "session-store", "sub-agents", "skills", "comms", "mcp"]

# LLM providers (forwarded to facade)
anthropic = ["meerkat/anthropic"]
openai = ["meerkat/openai"]
gemini = ["meerkat/gemini"]

# Storage backends (forwarded to facade)
jsonl-store = ["meerkat/jsonl-store"]

# Session capabilities (forwarded to facade)
session-store = ["meerkat/session-store"]
session-compaction = ["meerkat/session-compaction"]
# Enables both the memory backend capability and memory_search/session wiring.
memory-store = ["meerkat/memory-store", "meerkat/memory-store-session"]
memory-store-session = ["meerkat/memory-store-session"]

# Subsystems
comms = ["dep:meerkat-comms", "meerkat/comms"]
mcp = ["dep:meerkat-mcp", "meerkat/mcp"]
sub-agents = ["meerkat/sub-agents"]
skills = ["meerkat/skills"]

integration-real-tests = []

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
serde_json = { workspace = true }
meerkat-comms = { workspace = true }

[package.metadata.cargo-machete]
ignored = ["thiserror"]  # proc macro (derive)

[lints]
workspace = true
